# lua-expect

./: .gitignore  CMakeLists.txt  README.md  expect.lua
src/: CMakeLists.txt  io.h  io_common.c  io_unix.c  io_unix.h  io_win.c  io_win.h  lio.c  lio.h  lpty.c  lpty.h  ltimeout.c  ltimeout.h  lua_compat.h  pty_compat.h  timeout.c  timeout.h
tests/: CMakeLists.txt  pacman_expect.lua  read_test.c  ssh_expect.lua  write_test.c
util/: revim
